--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -135,3 +135,151 @@
     width: 2.4px;
   }
 }
+//====================================================================================
+
+.reviews {
+  background-color: #fff;
+  @include adaptiveValue("padding-top", 85, 50);
+  @include adaptiveValue("padding-bottom", 100, 500);
+
+  // .reviews__container
+
+  &__container {
+  }
+
+  // .reviews__title
+
+  &__title {
+    color: var(--Grey-2, #878787);
+    font-family: Montserrat;
+    font-size: 90px;
+    font-style: normal;
+    font-weight: 200;
+    line-height: 100%; /* 90px */
+
+    padding-bottom: toRem(73);
+
+    @media (max-width: $tablet) {
+      text-align: center;
+    }
+  }
+
+  // .reviews__content
+
+  &__content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    @media (max-width: $tablet) {
+      flex-direction: column;
+      text-align: center;
+    }
+  }
+
+  // .reviews__item
+
+  &__item {
+  }
+
+  // .reviews__more
+
+  &__more {
+    @include adaptiveValue("padding-bottom", 94, 50);
+    color: #0f0f0f;
+    font-family: Montserrat;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 100%; /* 24px */
+    text-transform: uppercase;
+
+    cursor: pointer;
+
+    &:hover {
+      text-decoration: underline;
+    }
+
+    &::after {
+      content: "";
+      width: 74px;
+      height: 1px;
+      background: #0f0f0f;
+      text-align: center;
+    }
+  }
+
+  // .reviews__text
+
+  &__text {
+    color: #0f0f0f;
+
+    font-family: Montserrat;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 25px; /* 156.25% */
+    letter-spacing: 1.12px;
+
+    span {
+      cursor: pointer;
+      color: #0f0f0f;
+      font-family: Montserrat;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 25px;
+      letter-spacing: 1.12px;
+
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
+}
+.item-reviews {
+  // .item-reviews__raiting
+
+  &__raiting {
+    padding-bottom: toRem(15);
+  }
+
+  // .item-reviews__title
+
+  &__title {
+    color: #000;
+
+    font-family: Montserrat;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 130%; /* 28.6px */
+
+    padding-bottom: toRem(15);
+  }
+
+  // .item-reviews__text
+
+  &__text {
+    max-width: 748px;
+    color: #000;
+    padding-bottom: toRem(25);
+
+    font-family: Montserrat;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 140%; /* 22.4px */
+  }
+
+  &__date {
+    padding-bottom: toRem(60);
+    color: #000;
+
+    font-family: Montserrat;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 140%; /* 22.4px */
+  }
+}
