--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1,1 +1,10 @@
 // Заголовки, загальні БЕМ блоки та інше...
+
+.title {
+  color: var(--Grey-2, #878787);
+  font-family: Montserrat;
+  @include adaptiveValue("font-size", 90, 56);
+  font-style: normal;
+  font-weight: 200;
+  line-height: 100%;
+}
