--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -283,3 +283,126 @@
     line-height: 140%; /* 22.4px */
   }
 }
+//====================================================================================
+.news {
+  @include adaptiveValue("padding-top", 80, 60);
+  @include adaptiveValue("padding-bottom", 80, 60);
+  background-color: #f4efec;
+
+  // .news__container
+
+  &__container {
+    display: flex;
+    justify-content: space-between;
+
+    @media (max-width: toRem(1240)) {
+      flex-direction: column;
+    }
+  }
+
+  // .news__content
+
+  &__content {
+  }
+
+  // .news__image
+
+  &__bg {
+    position: relative;
+  }
+
+  &__image {
+    display: block;
+    height: 64.84vw;
+    position: absolute;
+    right: 0;
+    top: -5.02vw;
+    width: 45.78vw;
+    z-index: 1;
+
+    @media (max-width: toRem(1240)) {
+      top: 0;
+      height: 0;
+      width: 0;
+    }
+
+    img {
+      object-position: center center;
+      width: 100%;
+      height: 100%;
+    }
+  }
+}
+.content-news {
+  @media (max-width: toRem(1240)) {
+    text-align: center;
+  }
+  // .content-news__title
+
+  &__title {
+    padding-bottom: toRem(70);
+  }
+
+  // .content-news__item
+
+  &__item {
+  }
+
+  // .content-news__subtitle
+
+  &__subtitle {
+    padding-bottom: toRem(15);
+    color: #000;
+
+    font-family: Montserrat;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 130%;
+  }
+
+  // .content-news__text
+
+  &__text {
+    padding-bottom: toRem(30);
+    max-width: 748px;
+
+    color: #000;
+
+    font-family: Montserrat;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 140%;
+  }
+
+  // .content-news__read
+
+  &__read {
+    @include adaptiveValue("padding-bottom", 95, 60);
+    color: #000;
+
+    font-family: Montserrat;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 140%; /* 22.4px */
+    cursor: pointer;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+
+  // .content-news__more
+
+  &__more {
+    color: var(--Black-1, #0f0f0f);
+    font-family: Montserrat;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 100%; /* 24px */
+    text-transform: uppercase;
+  }
+}
