--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -406,3 +406,213 @@
     text-transform: uppercase;
   }
 }
+
+//====================================================================================
+.best {
+  background-color: #fff;
+  @include adaptiveValue("padding-bottom", 140, 70);
+  @include adaptiveValue("padding-top", 100, 50);
+
+  // .best__container
+
+  &__container {
+  }
+
+  // .best__wrap
+
+  &__wrap {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    @media (max-width: toRem(1049)) {
+      flex-direction: column;
+      gap: toRem(20);
+    }
+  }
+
+  // .best__title
+
+  &__title {
+  }
+
+  // .best__text
+
+  &__text {
+    color: var(--Black-1, #0f0f0f);
+    font-family: Montserrat;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 100%; /* 24px */
+    text-transform: uppercase;
+
+    @media (max-width: toRem(1049)) {
+      padding-bottom: toRem(20);
+    }
+  }
+
+  // .best__items
+
+  &__items {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: toRem(60);
+
+    @media (max-width: toRem(1049)) {
+      grid-template-columns: repeat(3, 1fr);
+    }
+
+    @media (max-width: $mobile) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    @media (max-width: $mobile) {
+      grid-template-columns: repeat(1, 1fr);
+      text-align: center;
+    }
+  }
+}
+
+.item-card {
+  position: relative;
+  max-width: 374;
+  // .item-card__labels
+
+  // .item-card__image
+
+  &__image {
+    padding-bottom: toRem(15);
+
+    img {
+      width: 100%;
+      transition: all 0.3s;
+
+      &:hover {
+        scale: 1.04;
+      }
+    }
+  }
+
+  // .item-card__content
+
+  &__content {
+  }
+
+  // .item-card__colors
+
+  &__colors {
+    display: none;
+    max-width: 171px;
+    img {
+      width: 100%;
+    }
+  }
+
+  // .item-card__wrap
+
+  &__wrap {
+    display: flex;
+    justify-content: space-between;
+
+    padding-bottom: toRem(17);
+
+    @media (max-width: $tablet) {
+      flex-direction: column;
+      text-align: center;
+    }
+  }
+
+  // .item-card__raiting
+
+  &__raiting {
+  }
+
+  // .item-card__text
+
+  &__text {
+    color: var(--Black-1, #0f0f0f);
+    font-family: Montserrat;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+  }
+
+  // .item-card__subtitle
+
+  &__subtitle {
+    padding-bottom: toRem(25);
+
+    color: #0f0f0f;
+
+    font-family: Montserrat;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+  }
+
+  // .item-card__price
+
+  &__price {
+    padding-bottom: toRem(35);
+
+    color: #0f0f0f;
+
+    font-family: Montserrat;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    letter-spacing: 2.1px;
+  }
+
+  // .item-card__btn
+
+  &__btn {
+    display: none;
+  }
+
+  // .item-card__button
+
+  &__button {
+    font-size: 18px;
+    letter-spacing: 0.07em;
+    line-height: 22px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    background-color: #0f0f0f;
+    color: #fff;
+    display: flex;
+    font-weight: 700;
+
+    text-transform: uppercase;
+    transform: translateX(-30px);
+    padding: toRem(25) toRem(120);
+
+    transition: all 0.3s;
+
+    &:hover {
+      background-color: transparent;
+      color: #0f0f0f;
+      border-color: 1px #0f0f0f;
+    }
+  }
+}
+.labels {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 0;
+  z-index: 10;
+  // .labels__text
+
+  &__text {
+    background-color: #0000;
+    color: #fff;
+  }
+}
