--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,2 +1,80 @@
 .header {
+  padding: toRem(20);
+  background-color: #88a07d;
+  height: toRem(160);
+  display: flex;
+  align-items: center;
+
+  @media (max-width: $mobileSmall) {
+    padding: toRem(20) toRem(20) toRem(20) toRem(0);
+  }
+
+  &__container {
+    display: grid;
+    grid-template-columns: 0.15fr 1fr 1fr;
+    column-gap: toRem(35);
+    align-items: center;
+
+    @media (max-width: $mobileSmall) {
+      column-gap: toRem(20);
+    }
+  }
+
+  &__logo {
+    @media (max-width: $mobile) {
+      width: toRem(100);
+      height: toRem(100);
+
+      img {
+        width: 100%;
+      }
+    }
+
+    @media (max-width: $mobileSmall) {
+      width: toRem(70);
+      height: toRem(70);
+    }
+  }
+
+  &__navigation {
+    display: flex;
+    flex-wrap: wrap;
+    @include adaptiveValue("column-gap", 80, 20, 1, 1920, 360);
+    row-gap: toRem(15);
+  }
+
+  &__link {
+    display: flex;
+    align-items: center;
+    gap: toRem(12);
+
+    img {
+      width: toRem(15);
+      height: toRem(15);
+    }
+
+    @media (max-width: toRem(907.98)) {
+      max-width: toRem(135);
+    }
+  }
+
+  &__details {
+    display: flex;
+    flex-wrap: wrap;
+    @include adaptiveValue("column-gap", 42, 10, 1, 1920, 360);
+    row-gap: toRem(15);
+    justify-content: space-between;
+    justify-self: flex-end;
+  }
+
+  &__language {
+    display: flex;
+    align-items: center;
+    gap: toRem(10);
+
+    img {
+      width: toRem(15);
+      height: toRem(15);
+    }
+  }
 }
