--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -766,3 +766,98 @@
     line-height: 130%; /* 31.2px */
   }
 }
+
+//====================================================================================
+.main-page {
+  position: relative;
+  background: url("@img/main.jpg") no-repeat center center;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+
+  &__container {
+    padding-top: toRem(115);
+    position: relative;
+  }
+
+  &__title {
+    color: #fff;
+    @include adaptiveValue("font-size", 160, 40);
+    font-weight: 100;
+
+    &_right {
+    }
+  }
+
+  &__image {
+  }
+
+  &__subtitle {
+    @include adaptiveValue("padding-top", 60, 20);
+    @include adaptiveValue("padding-bottom", 60, 20);
+    max-width: toRem(640);
+    color: #fff;
+    @include adaptiveValue("font-size", 24, 16);
+  }
+
+  &__button {
+    max-width: toRem(313);
+    text-align: center;
+    border: 1px solid #ffffff;
+    padding: toRem(25) toRem(0);
+    color: #fff;
+    font-size: toRem(18);
+    position: relative;
+
+    &::after {
+      content: "";
+      position: absolute;
+      width: toRem(74);
+      height: toRem(1);
+      top: 50%;
+      right: 5%;
+      background-color: #fff;
+    }
+  }
+
+  &__count {
+    position: absolute;
+    bottom: -30%;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    gap: toRem(20);
+
+    span {
+      color: #fff;
+      font-size: toRem(72);
+      font-weight: 200;
+      opacity: 0.5;
+    }
+  }
+
+  &__arrow-left {
+    width: toRem(40);
+    height: toRem(70);
+    opacity: 0.5;
+    transform: rotate(90deg);
+
+    img {
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  &__arrow-right {
+    width: toRem(40);
+    height: toRem(70);
+    opacity: 0.5;
+    transform: rotate(-90deg);
+
+    img {
+      width: 100%;
+      height: 100%;
+    }
+  }
+}
