--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -66,6 +66,17 @@
     justify-self: flex-end;
   }
 
+  img {
+    transition:
+      transform 0.3s ease,
+      filter 0.3s ease;
+
+    &:hover {
+      transform: scale(1.1);
+      filter: brightness(1.2);
+    }
+  }
+
   &__language {
     display: flex;
     align-items: center;
