--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -115,18 +115,20 @@
     img {
       width: 100%;
       height: 100%;
-      transition: all 0.3s;
-      fill: #878787;
-
-      &:hover {
-        fill: #1f1818;
-      }
     }
   }
 
   // .social-follow__link
 
   &__link {
+    transition:
+      transform 0.3s ease,
+      filter 0.3s ease;
+
+    &:hover {
+      transform: scale(1.1);
+      filter: brightness(1.2);
+    }
   }
 
   &__border {
@@ -801,6 +803,7 @@
   }
 
   &__button {
+    cursor: pointer;
     max-width: toRem(313);
     text-align: center;
     border: 1px solid #ffffff;
@@ -837,7 +840,7 @@
     }
   }
 
-  &__arrow-left {
+  &__arrow {
     width: toRem(40);
     height: toRem(70);
     opacity: 0.5;
@@ -850,14 +853,6 @@
   }
 
   &__arrow-right {
-    width: toRem(40);
-    height: toRem(70);
-    opacity: 0.5;
     transform: rotate(-90deg);
-
-    img {
-      width: 100%;
-      height: 100%;
-    }
   }
 }
