--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,8 +1,14 @@
 .header {
-  padding: toRem(20);
+  padding: toRem(20) toRem(20) toRem(30) toRem(20);
   height: toRem(160);
   display: flex;
   align-items: center;
+
+  position: absolute;
+  width: 100%;
+  z-index: 50;
+  left: 0;
+  top: 0;
 
   @media (max-width: $mobileSmall) {
     padding: toRem(20) toRem(20) toRem(20) toRem(0);
