--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -770,28 +770,47 @@
 }
 
 //====================================================================================
-.main-page {
+
+//====================================================================================
+
+//====================================================================================
+.main {
+  &__slider {
+    min-width: 0;
+  }
+}
+
+.slider-main {
+  flex-shrink: 0;
   position: relative;
-  background: url("@img/main.jpg") no-repeat center center;
-  background-size: cover;
-  width: 100%;
-  height: 100vh;
+  overflow: hidden;
+  // .slider-main__bg
+
+  &__bg {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+    opacity: 0.8;
+  }
+
+  // .slider-main__container
 
   &__container {
-    padding-top: toRem(115);
+    min-height: 100vh;
+    z-index: 2;
     position: relative;
+    padding-top: toRem(190);
   }
+
+  // .slider-main__title
 
   &__title {
     color: #fff;
     @include adaptiveValue("font-size", 160, 40);
     font-weight: 100;
-
-    &_right {
-    }
-  }
-
-  &__image {
   }
 
   &__subtitle {
@@ -801,6 +820,8 @@
     color: #fff;
     @include adaptiveValue("font-size", 24, 16);
   }
+
+  // .main-slider__button
 
   &__button {
     cursor: pointer;
@@ -823,22 +844,32 @@
     }
   }
 
-  &__count {
-    position: absolute;
-    bottom: -30%;
-    right: 0;
-    bottom: 0;
-    display: flex;
-    align-items: center;
-    gap: toRem(20);
+  // .main-slider__count
 
-    span {
-      color: #fff;
-      font-size: toRem(72);
-      font-weight: 200;
-      opacity: 0.5;
-    }
+  &__count {
   }
+
+  // .main-slider__arrow
+}
+//====================================================================================
+
+.slider-buttons {
+  position: absolute;
+  bottom: -30%;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  gap: toRem(20);
+
+  span {
+    color: #fff;
+    font-size: toRem(72);
+    font-weight: 200;
+    opacity: 0.5;
+  }
+
+  // .slider-buttons__arrow
 
   &__arrow {
     width: toRem(40);
@@ -854,5 +885,13 @@
 
   &__arrow-right {
     transform: rotate(-90deg);
+
+    width: toRem(40);
+    height: toRem(70);
+    opacity: 0.5;
+    img {
+      width: 100%;
+      height: 100%;
+    }
   }
 }
